bpo-39020: Fix building the _curses module on AIX

Make curses.get_escdelay() optional.